--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.platform=h2 
 spring.datasource.url=jdbc:h2:mem:frienddb
 
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-
-spring.jpa.generate-ddl=true
-spring.datasource.initialize=true
-
-
-server.port=9001
+spring.profiles.active=${ENV:dev}
